--- a/src/App.css
+++ b/src/App.css
@@ -13053,7 +13053,7 @@ hr {
   }
 
   .alert-message {
-    background: #BC8F8F;
+    background: #FFC0CB;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
